# api-football-sdk

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  coverage.ini  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pre-commit.yml  release.yml
src/api_football_sdk/: __init__.py  client.py  config.py  exceptions.py
src/api_football_sdk/endpoints/: coachs.py  countries_seasons.py  events.py  fixtures.py  leagues.py  lineups.py  players.py  standings.py  statistics.py  teams.py  top_scorers.py  trophies.py
tests/: conftest.py  test_client.py  test_config.py  test_exceptions.py
tests/adapters/: test_base.py
tests/endpoints/: test_coachs.py  test_countries_seasons.py  test_events.py  test_fixtures.py  test_injuries.py  test_lineups.py  test_players.py  test_standings.py  test_statistics.py  test_teams.py  test_timezone.py  test_top_scorers.py  test_trophies.py
