[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-football-sdk"
version = "0.1.0"
description = "SDK for interacting with the API Football."
authors = [{ name = "Matheus Hanssen" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["httpx>=0.28.1", "pydantic>=2.11.1", "pydantic-settings>=2.9.1"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "black>=24.4.2",
    "ruff>=0.4.3",
    "pre-commit>=3.7.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --tb=short --asyncio-mode=auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
